# $Id$

2006-11-06	Konstantin V. Arkhipov

	* meta/builders/BaseBuilder.class.php: backported fix for non-required
	Ranges generation.

2006-10-25	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.

2006-10-21	Konstantin V. Arkhipov

	* 0.4.10 released.

2006-10-18	Konstantin V. Arkhipov

	* core/Form/PrimitiveImage.class.php: big images' handling
	fixed.

2006-10-05	Konstantin V. Arkhipov

	* meta/builders/AutoDaoBuilder.class.php: public constructor's
	generation fixed.

2006-10-04	Konstantin V. Arkhipov

	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
	on integer's with leading zeros now; arrived from trunk.

2006-10-02	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: do not generate unsupported
	relations in schema.

2006-09-26	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: handling of property-less
	classes fixed too.

	* meta/builders/AutoDaoBuilder.class.php: fixed bug with inherited
	property-less DAO's.

2006-09-25	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: corrected handling of
	parent's identifiers (if any).

	* meta/builders/ProtoClassBuilder.class.php: inheritance support
	implemented, useless constructor and private property dropped.

	* meta/classes/MetaClass.class.php: try to resolve parent's identifier
	in cases where child doesn't own one, arrived from trunk.

2006-08-23	Konstantin V. Arkhipov

	* * core/Cache/PeclMemcached.class.php: several stfu's from trunk.

2006-08-18	Konstantin V. Arkhipov

	* main/Containers/StorableContainer.class.php: backported
	getIdsList() fix from trunk.

2006-08-17	Konstantin V. Arkhipov

	* 0.4.9 released.

2006-08-08	Konstantin V. Arkhipov

	* core/DB/, meta/builders/: now php-5.2 compatible, backported from
	trunk.

2006-07-21	Konstantin V. Arkhipov

	* 0.4.8 released.

2006-07-17	Konstantin V. Arkhipov
