@@ -1,5 +1,9 @@
 # $Id$
 
+2006-11-29	Konstantin V. Arkhipov
+
+	* core/Cache/: no more pass-by-reference.
+
 2006-11-06	Konstantin V. Arkhipov
 
 	* meta/builders/BaseBuilder.class.php: backported fix for non-required
